frontend/style.css
body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
}

.layout {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    position: relative;
    width: 100%;
}

.sidebar {
    width: 0;
    overflow: hidden;
    transition: width 0.3s ease;
    background: #e2f7ff;
    padding: 0;
    height: 100vh;
    position: sticky;
    top: 0;
}

.sidebar.open {
    width: 200px;
    padding: 20px;
}

.toggle-btn {
    position: sticky;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
    background: #ddd;
    border: none;
    padding: 10px 6px;
    font-size: 12px;
    transition: all 0.3s ease;
}

.toggle-btn.open {
    position: fixed;
    left: 240px;
}

.main {
    flex: 1;
    transition: all 0.3s ease;
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.chapter{
    font-family: Arial, sans-serif;
    background-color: #ffffff;
    color: #000000;
    padding: 20px;
    margin: auto;
    font-size: 30px;
}
.chapter.empty::before{
    content: attr(data-placeholder);
    color: #aaa;
}

.page{
    background: white;
    width: 700px;
    min-height: 500px;
    padding: 60px;
    color: black;
    box-shadow: 0 0 10px rgb(0, 0, 0);
    box-sizing: border-box;
}
.page.empty::before {
    content: attr(data-placeholder);
    color: #aaa;
}

.saver{
    display: block;
    margin: 0 auto;
    height: 50px;
    width: 150px;
    font-size: 15px;
}

